unpackaged/main/default/objects/Campaign/fields/Actual_Cost_Formula__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost_Formula__c</fullName>
    <description>This is a formula field that can display on Campaign + Opportunity Reports.</description>
    <formula>ActualCost</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a formula field that can display on Campaign + Opportunity Reports.</inlineHelpText>
    <label>Actual Cost - F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>