unpackaged/main/default/objects/Campaign/fields/Analytics_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Campaign_Name__c</fullName>
    <label>Analytics: Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>