unpackaged/main/default/objects/Campaign/fields/Analytics_Campaign_Term__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Campaign_Term__c</fullName>
    <label>Analytics: Campaign Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>