unpackaged/main/default/objects/Campaign/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Funding</fullName>
                <default>true</default>
                <label>National Funding</label>
            </value>
            <value>
                <fullName>Edge Funding</fullName>
            </value>
            <value>
                <fullName>Finova</fullName>
            </value>
            <value>
                <fullName>Quick Bridge</fullName>
            </value>
            <value>
                <fullName>SBL</fullName>
                <isActive>false</isActive>
                <label>SBL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>