unpackaged/main/default/objects/Campaign/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <label>Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>