unpackaged/main/default/objects/Campaign/fields/Creative_Number__c.field-meta.xml
<CustomField>
    <fullName>Creative_Number__c</fullName>
    <description>This field will capture the Creative Number of the piece that is being sent with a campaign.  This field will be completed by marketing.</description>
    <inlineHelpText>This field will capture the Creative Number of the piece that is being sent with a campaign.  This field will be completed by marketing.</inlineHelpText>
    <label>Creative Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>