unpackaged/main/default/objects/Campaign/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>PD-1666</description>
    <label>Data Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>