unpackaged/main/default/objects/Campaign/fields/Drops__c.field-meta.xml
<CustomField>
    <fullName>Drops__c</fullName>
    <label>Drops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>