unpackaged/main/default/objects/Campaign/fields/Faxes_Confirmed_Received__c.field-meta.xml
<CustomField>
    <fullName>Faxes_Confirmed_Received__c</fullName>
    <description>This field will capture the number of faxes that our fax provider successfully sent out on our behalf.</description>
    <inlineHelpText>This field will capture the number of faxes that our fax provider successfully sent out on our behalf.</inlineHelpText>
    <label>Faxes Confirmed Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>