unpackaged/main/default/objects/Campaign/fields/Follow_Up_Piece_1__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Piece_1__c</fullName>
    <description>This field will indicate if a follow up piece to a direct mail campaign has been sent out.</description>
    <inlineHelpText>This field will indicate if a follow up piece to a direct mail campaign has been sent out.  Pick the type of follow up piece being sent to the campaign.</inlineHelpText>
    <label>Follow Up Piece 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Snap Pack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>