unpackaged/main/default/objects/Campaign/fields/Follow_Up_Piece_1_Cost__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Piece_1_Cost__c</fullName>
    <description>This field will indicate the cost of the follow pieces were sent to a direct mail campaign.</description>
    <inlineHelpText>This field will indicate the cost of the follow pieces were sent to a direct mail campaign.  Please enter an amount.</inlineHelpText>
    <label>Follow Up Piece 1 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>