unpackaged/main/default/objects/Campaign/fields/Follow_Up_Piece_2_Number_Sent__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Piece_2_Number_Sent__c</fullName>
    <description>This field will indicate how many follow up pieces were sent to a direct mail campaign.</description>
    <inlineHelpText>This field will indicate how many follow up pieces were sent to a direct mail campaign. Enter the number sent.</inlineHelpText>
    <label>Follow Up Piece 2 Number Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>