unpackaged/main/default/objects/Campaign/fields/Follow_Up_Piece_2_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Piece_2_Start_Date__c</fullName>
    <description>This field will indicate when the follow pieces were sent to a direct mail campaign.</description>
    <inlineHelpText>This field will indicate when the follow pieces were sent to a direct mail campaign. Please enter a date.</inlineHelpText>
    <label>Follow Up Piece 2 Start Date</label>
    <type>Date</type>
</CustomField>