unpackaged/main/default/objects/Campaign/fields/Insert_Number__c.field-meta.xml
<CustomField>
    <fullName>Insert_Number__c</fullName>
    <label>Insert Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>