unpackaged/main/default/objects/Campaign/fields/List_Reference__c.field-meta.xml
<CustomField>
    <fullName>List_Reference__c</fullName>
    <label>List Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>