unpackaged/main/default/objects/Campaign/fields/PPC_Campaign_Channel__c.field-meta.xml
<CustomField>
    <fullName>PPC_Campaign_Channel__c</fullName>
    <label>PPC Campaign Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>