unpackaged/main/default/objects/Campaign/fields/PPC_Campaign_Group__c.field-meta.xml
<CustomField>
    <fullName>PPC_Campaign_Group__c</fullName>
    <description>Used by Analytics/Marketing to group PPC campaigns.</description>
    <label>PPC Campaign Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>