unpackaged/main/default/objects/Campaign/fields/Product_Target__c.field-meta.xml
<CustomField>
    <fullName>Product_Target__c</fullName>
    <description>This field will capture the Product Target of each campaign. It will also allow for better segmentation for reporting.</description>
    <inlineHelpText>Select the Product Target that this campaign is targeting.</inlineHelpText>
    <label>Product Target</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>EPP</fullName>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>