unpackaged/main/default/objects/Campaign/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <description>The program code for the marketing campaign.</description>
    <inlineHelpText>The program code for the marketing campaign.</inlineHelpText>
    <label>Program Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>