unpackaged/main/default/objects/Campaign/fields/Prospect_Type__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Type__c</fullName>
    <description>This field will capture the Prospect type of each campaign.  It will also allow for better segmentation for reporting.</description>
    <inlineHelpText>Select the Prospect type that this campaign is targeting.  Acquisition or House records.</inlineHelpText>
    <label>Prospect Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>