unpackaged/main/default/objects/Campaign/fields/Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Response_Rate__c</fullName>
    <description>Response Rate for a Campaign - Number of Responses / Number Sent</description>
    <formula>NumberOfResponses / NumberSent</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Response Rate for a Campaign - Number of Responses / Number Sent</inlineHelpText>
    <label>Response Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>