unpackaged/main/default/objects/Campaign/fields/SLX_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>SLX_Campaign_Code__c</fullName>
    <description>Campaign code lookup into Saleslogix.</description>
    <inlineHelpText>Campaign code lookup into Saleslogix.</inlineHelpText>
    <label>SLX Campaign Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>