unpackaged/main/default/objects/Campaign/fields/Test_Detail__c.field-meta.xml
<CustomField>
    <fullName>Test_Detail__c</fullName>
    <description>Captures the details of a campaign test.</description>
    <label>Test Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>