unpackaged/main/default/objects/Campaign/validationRules/brand_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>brand_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
ISBLANK(TEXT(Brand__c)), $Setup.ValidationRules__c.Allow_Campaign_Creation_With_no_Brand__c = false 
)</errorConditionFormula>
    <errorMessage>Brand is required.</errorMessage>
</ValidationRule>